[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pyterrier_pisa"
dynamic = ["version", "dependencies"]
description = "A PyTerrier interface to the PISA search engine"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Sean MacAvaney"}]
requires-python = ">=3.8"

[project.optional-dependencies]
ciff = ["pyciff==0.1.1"]

[project.scripts]
pyterrier_pisa = "pyterrier_pisa.cli:main"

[project.entry-points."pyterrier.artifact"]
"sparse_index.pisa" = "pyterrier_pisa:PisaIndex"

[project.entry-points."pyterrier.artifact.metadata_adapter"]
"sparse_index.pisa" = "pyterrier_pisa.pisa_metadata_adapter:pisa_artifact_metadata_adapter"

[tool.scikit-build]
experimental = true
wheel.packages = ["src/pyterrier_pisa"]
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/pyterrier_pisa/__init__.py"
metadata.version.regex = '(?m)^__version__ = "(?P<value>[^"]+)"'
metadata.dependencies.provider = "_deps_from_file"
metadata.dependencies.provider-path = "."
